--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ VITE_PROJECT_ID=asset-verse-c2f19
 VITE_STORAGE_BUCKET=asset-verse-c2f19.firebasestorage.app
 VITE_MESSAGING_SENDER_ID=659095788428
 VITE_APP_ID=1:659095788428:web:ab4d1508f984f23c0514a9
+
+
+
+VITE_IMG_API=2efeaf42351de07fecfe3f72b7542196
